fixed gap between two-column feild and single-column field

--- a/assets/css/everest-forms.scss
+++ b/assets/css/everest-forms.scss
@@ -15,6 +15,13 @@
 			content: "";
 			display: table;
 		}
+
+		&:last-child {
+
+			.everest-forms-field-sublabel {
+				margin-bottom: 0;
+			}
+		}
 	}
 
 	.evf-frontend-row {
